tests/snapshots/integration_tests__examples_match_snapshots@hello-world.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/hello-world
---
hello.txt: hello world
