tests/snapshots/integration_tests__examples_match_snapshots@hidden-content.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/hidden-content
---
{}
