tests/snapshots/integration_tests__examples_match_snapshots@invalid-duplicate-media-type-2.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/invalid-duplicate-media-type-2
---
bad.xml: "Error: Unable to load content.\n\nCaused by:\n    There are multiple content files for route /bad with the same media type (text/xml).\n"
bad.xml.php: "Error: Unable to load content.\n\nCaused by:\n    There are multiple content files for route /bad with the same media type (text/xml).\n"
