tests/snapshots/integration_tests__examples_match_snapshots@invalid-templates.snap
---
source: tests/integration_tests.rs
expression: contents
input_file: src/examples/invalid-templates
---
borked.html.hbs: "Unable to load content.\n\nCaused by:\n    0: Failed to parse handlebars template 'borked.html.hbs'.\n    1: Template error: invalid handlebars syntax.\n           --> Template error in \"borked.html.hbs\":3:1\n            |\n          0 | {{!-- this is not valid --}}\n          1 | {{\n            |\n            = reason: invalid handlebars syntax.\n       \n"
